# kuki

./: README.md  gui.py  instructions.txt  pyproject.toml  requirements.txt  st_ui.py  web_ui.py
kuki/: core.py  serve.py
kuki/templates/: index.html
